--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "mongoose": "^8.15.0",
+    "nodemailer": "^7.0.9",
     "stripe": "^19.1.0"
   },
   "description": ""
